@@ -137,7 +137,7 @@ def clip(
 
             # Get the window with integer height
             # and width that contains the bounds window.
-            out_window = bounds_window.round_lengths(op='ceil')
+            out_window = bounds_window.round_lengths()
 
             height = int(out_window.height)
             width = int(out_window.width)
